# macro-financial-stress-testing

./: .gitignore  README.md  pyproject.toml
data/processed/: gdp_growth_df.csv  gilt_10y_df.csv  house_price_growth_df.csv  macro_hist.csv  policy_rate_df.csv  processed_data.py  unemployment_rate_df.csv
data/raw/: gdp_growth_df.csv  house_price_growth_df.csv  policy_rate_df.csv  raw_data.py  unemployment_rate_df.csv
notebooks/: 00_exploration.ipynb
outputs/tables/: bank_starting_positions.csv  cet1_ratio_paths.csv  loss_paths.csv  losses_by_bucket.csv  system_results.csv  trough_summary.csv
scripts/: run_stress_test.py
src/stress_test/: balance_sheet.py  config.py  engine.py  reporting.py  satellite.py  scenarios.py  synthetic_data.py
src/stress_test.egg-info/: PKG-INFO  SOURCES.txt
src/stress_test/data/: data.py  processed_data.py  raw_data.py
tests/: test_balance_sheet.py  test_engine.py  test_satellite.py  test_scenarios.py  test_synthetic_data.py
