[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-financial-stress-testing"
version = "0.1.0"
description = "A simplified macro-financial stress testing framework inspired by central bank methodologies"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "statsmodels",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]